[workspace]
resolver = "2"
members = [
  "aral",
  "aral-runtimes/*",
#   "tests/*",
]

[workspace.package]
authors = ["ARAL Development Team", "jmjoy <jmjoy@apache.org>"]
edition = "2021"
license = "Apache-2.0 OR MIT OR MulanPSL-2.0"
repository = "https://github.com/aral-rs/aral.git"
rust-version = "1.75"

[workspace.dependencies]
aral-runtime-tokio = { version = "0.1.0", path = "./aral-runtimes/tokio" }
aral-runtime-async-std = { version = "0.1.0", path = "./aral-runtimes/async-std" }
aral-runtime-noop = { version = "0.1.0", path = "./aral-runtimes/noop" }
