# Copyright 2023 ARAL Development Team
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "aral"
description = "Async Runtime Aggregation Layer."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[features]
runtime-tokio-current-thread = ["tokio"]
runtime-tokio-multi-thread = ["tokio", "tokio/rt-multi-thread"]
runtime-async-std = ["async-std"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
cfg-if = "1.0.0"
tokio = { version = "1.28.1", features = ["fs", "io-util", "net", "time", "rt"], optional = true }
