[package]
name = "aral-runtime-async-std"
description = "Aral Runtime for async-std."
version = "0.1.0-alpha.5"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures-lite = "2.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]
