[package]
name = "aral-runtime-noop"
description = "Aral Runtime for noop."
version = "0.1.0-alpha.5"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docs_rs"]
